<resources>
    <string name="notification_channel_name">@string/app_name</string>
    <string name="error">Error</string>
    <string name="unexpected_error">Unexpected error has occurred. Please contact support team</string>
    <string name="could_not_register_account">Could not register account. Please try again later.</string>
    <string name="could_not_setup_notification">Could not setup notification. Please try again later.</string>
    <string name="how_you_use_fb">How you use Facebook.</string>
    <string name="how_fb_use_you">How Facebook uses you.</string>
    <string name="for_your_fb_data">For your facebook data</string>
    <string name="get_started_arrow">Get started »</string>
    <string name="i_already_have_an_account_arrow">I already have an account »</string>
    <string name="how_it_works">How it works</string>
    <string name="we_will_back_up_your_fb_data">We’ll back up your Facebook data archive into a personal data vault that only you control.</string>
    <string name="we_will_give_you_private_analytics">We’ll give you private analytics on your Facebook data.</string>
    <string name="your_vault_will_be_updated">Your vault will be updated each week with new Facebook data and insights.</string>
    <string name="continue_arrow">Continue »</string>
    <string name="get_your_data">Get your data</string>
    <string name="fb_login">Facebook login</string>
    <string name="fb_password">Facebook password</string>
    <string name="we_will_only_use_your_fb_login">We’ll only use your Facebook login information to automate your back up.  \n\nYour login is stored on your device, never in the Cloud.</string>
    <string name="prefer_to_do_this_manually">Prefer to do this manually?</string>
    <string name="data_requested">Data requested</string>
    <string name="fb_is_preparing_your_data">Facebook is preparing your data archive. This may take up to a few days, depending on how much data you have. \n\nWould you like us to notify you when your backup is ready? If not, you will need to return back here regularly to check if the backup is ready.</string>
    <string name="notify_me_arrow">Notify me »</string>
    <string name="enable_push_notification">Enable Push Notifications</string>
    <string name="allow_app_to_send_you">Allow “Spring” to send you push notifications?</string>
    <string name="no_thanks">No thanks</string>
    <string name="enable">Enable</string>
    <string name="we_will_notify_you_when_backup">We’ll notify you when your backup is ready.</string>
    <string name="authorize_arrow">Authorize »</string>
    <string name="automate_arrow">Automate »</string>
    <string name="spring">Spring</string>
    <string name="reports">Reports</string>
    <string name="usage">USAGE</string>
    <string name="insights">INSIGHTS</string>
    <string name="account">ACCOUNT</string>
    <string name="offer">OFFER</string>
    <string name="security">Security</string>
    <string name="unlink_from_device_arrow">Unlink from device »</string>
    <string name="biometric_auth_arrow">Biometric Authentication »</string>
    <string name="recovery_key_arrow">Recovery key »</string>
    <string name="support">Support</string>
    <string name="about_arrow">About »</string>
    <string name="faq_arrow">FAQ »</string>
    <string name="contact_arrow">Contact »</string>
    <string name="unlink_account">Unlink Account</string>
    <string name="unlink_account_arrow">Unlink Account »</string>
    <string name="if_you_unlink_your_account">If you unlink your account, you will be completely logged out on this device and will need to enter your 12-word recovery key to regain access and relink your account to this device. \n\nTo make ensure that you will not completely lose access to your account, you will next be asked to enter your 12-word recovery key before unlinking your account. If you haven’t already written down your recovery key, please do so now.</string>
    <string name="enter_your_12_words">Enter your 12-word recovery key above.</string>
    <string name="biometric_auth">Biometric</string>
    <string name="enable_biometric_authentication">Enable Biometric Authentication to secure your Spring data and account:</string>
    <string name="enable_biometric_auth">Enable Biometric Authentication</string>
    <string name="do_you_want_to_allow_to_use_biometric_auth">Do want to allow “Spring” to use Biometric Authentication?</string>
    <string name="app_will_use_biometric">Spring will use Biometric Authentication to secure your account and data.</string>
    <string name="recovery_key">Recovery Key</string>
    <string name="your_recovery_key_allow_you">Your recovery key allows you to fully recover your Spring account even if your device is lost or damaged. It is the only way to recover your account (Spring does not have access to your recovery key or store it anywhere for you). \n\nPlease make sure you are in a safe location then write down your recovery key on a piece of paper and keep it safe.</string>
    <string name="write_down_recovery_key_arrow">Write Down Recovery Key »</string>
    <string name="write_down_the_following_word">Write down the following words in order:</string>
    <string name="about">About</string>
    <string name="faq">FAQ</string>
    <string name="just_remind_you">Just reminding you to check if your Facebook archive is ready. Tap to continue.</string>
    <string name="still_waiting_for_your_data">Still waiting for your data backup. Please continue to check back here regularly.</string>
    <string name="fb_may_take_a_few_days">Facebook may take a few days to prepare your data archive, depending on how much data you have. \n\nWould you like us to remind you to check back here? If not, you will need to remember on your own to check if your backup is ready.</string>
    <string name="check_now_arrow">Check now »</string>
    <string name="still_waiting">Still Waiting</string>
    <string name="processing_data">Processing Data</string>
    <string name="your_fb_data_archive_has_been_successfully">Your Facebook data archive has been successfully secured. We’ve started processing your data and will send you a notification when it’s ready. You can safely close this app now.</string>
    <string name="week">Week</string>
    <string name="year">Year</string>
    <string name="decade">Decade</string>
    <string name="last_week">Last Week</string>
    <string name="this_year">This Year</string>
    <string name="this_decade">This Decade</string>
    <string name="posts">Posts</string>
    <string name="reactions">Reactions</string>
    <string name="messages">Messages</string>
    <string name="ad_interests">Ad Interests</string>
    <string name="advertisers">Advertisers</string>
    <string name="locations">Locations</string>
    <string name="you_made">You made</string>
    <string name="you_gave">You gave</string>
    <string name="you_sent_or_received">You sent or received</string>
    <string name="tracked_by_fb">Tracked by Facebook</string>
    <string name="collected_data_about_you">Collected data about you</string>
    <string name="updates">Updates</string>
    <string name="photos_videos">Photos &amp; Videos</string>
    <string name="stories">Stories</string>
    <string name="links">Links</string>
    <string name="like">Like</string>
    <string name="love">Love</string>
    <string name="wow">Wow</string>
    <string name="haha">Haha</string>
    <string name="sad">Sad</string>
    <string name="angry">Angry</string>
    <string name="streams">STREAMS</string>
    <string name="you_reacted">You reacted</string>
    <string name="you_reacted_to">You reacted to</string>
    <string name="with_person_or_group">With person or group</string>
    <string name="sent_or_received">Sent or received</string>
    <string name="empty" />
    <string name="by_type">By type</string>
    <string name="by_day">By day</string>
    <string name="by_month">By month</string>
    <string name="by_year">By year</string>
    <string name="by_friends_tagged">By friends tagged</string>
    <string name="by_place_tagged">By place tagged</string>
    <string name="by_friend">By friend</string>
    <string name="by_chat">By chat</string>
    <string name="of_topic">Of topic</string>
    <string name="fb_tracked_them">Facebook tracked them</string>
    <string name="of_industry">Of industry</string>
    <string name="that_your_data_was_collected">That your data was collected</string>
    <string name="of_location">Of location</string>
    <string name="by_area">By area</string>
    <string name="entertainment">Entertainment</string>
    <string name="fitness_and_wellness">Fitness &amp; Wellness</string>
    <string name="food_and_drink">Food &amp; Drink</string>
    <string name="hobbies_and_activities">Hobbies &amp; Activities</string>
    <string name="shopping_and_fashion">Shopping &amp; Fashion</string>
    <string name="shopping_center">Shopping Center</string>
    <string name="restaurant">Restaurant</string>
    <string name="gym">Gym</string>
    <string name="park">Park</string>
    <string name="airport">Airport</string>
    <string name="trust_is_critical">Trust is critical</string>
    <string name="spring_is_from_bitmark">Spring is from Bitmark, makers of the universal system for digital property rights. Our mission is to restore trust in data. We believe an internet where individuals control their own data will lead to a better future. Building this protocol to unlock the value of your data is our business.</string>
    <string name="sincerely_colon">Sincerely,</string>
    <string name="sean_name_and_title">Sean Moss-Pultz \nCo-founder and CEO</string>
    <string name="passcode_pin_required">Device PIN setup is required</string>
    <string name="fingerprint_required">Biometric authentication setup is required</string>
    <string name="your_authorization_is_required">Your authorization is required.</string>
    <string name="account_unlinked">Account unlinked</string>
    <string name="your_account_has_been_unlinked">Your account has been completely unlinked from this device.</string>
    <string name="automating_please_wait">Automating…\nplease wait.</string>
    <string name="your_help_is_required">Your help is required.</string>
    <string name="others">Others</string>
    <string name="no_activity_for_this_period">No activity for this period.</string>
    <string name="your_mood">Your Mood</string>
    <string name="sentiment_analysis_of_your_post">sentiment analysis of your posts</string>
    <string name="period_average">Period Average</string>
    <string name="happy">Happy</string>
    <string name="unhappy">Unhappy</string>
    <string name="one">1</string>
    <string name="ten">10</string>
    <string name="sorry_no_data">Sorry, no data available!</string>
    <string name="income">Income</string>
    <string name="mood">Mood</string>
    <string name="tell_us_your_thoughts_arrow">Tell us your thoughts »</string>
    <string name="last_year">Last Year</string>
    <string name="last_decade">Last Decade</string>
    <string name="lens">LENS</string>
    <string name="coming_soon">Coming soon!</string>
    <string name="we_are_making_a_simple_lens">We are making a simple lens builder and store. Like cooking recipes, people will be able to experiment, share, and sell lenses to get more utility from your data.</string>
    <string name="we_are_waiting_for_fb_1">We’re waiting for Facebook to finish preparing your data archive. This may take up to a few days, depending on how much data you have.</string>
    <string name="categories_for_ads">Categories for Ads</string>
    <string name="these_categories_are_based">These categories are based on your activity. They are used by advertisers to personalize your information.</string>
    <string name="by_continuing">By continuing, you agree to the Bitmark \nTerm of Service and Privacy Policy.</string>
</resources>