<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingStart="@dimen/dp_18"
    android:paddingTop="@dimen/dp_30"
    android:paddingEnd="@dimen/dp_18"
    android:paddingBottom="@dimen/dp_30"
    >

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/ivTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/domaine_sans"
        android:includeFontPadding="false"
        android:text="@string/your_mood"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_4"
        android:ellipsize="end"
        android:fontFamily="@font/domaine_sans"
        android:maxLines="1"
        android:text="@string/sentiment_analysis_of_your_post"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivTitle"
        app:layout_constraintTop_toTopOf="@id/ivTitle"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivSentiment"
        android:layout_width="@dimen/dp_112"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivTitle"
        tools:src="@drawable/ic_happy_bw"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPeriodAvg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:fontFamily="@font/domaine_sans"
        android:text="@string/average"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivSentiment"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivSeekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toBottomOf="@id/tvPeriodAvg"
        tools:src="@drawable/ic_seek_bar_7"
        />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHappy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_3"
        android:fontFamily="@font/grotesk_light"
        android:text="@string/unhappy"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_10"
        app:layout_constraintStart_toStartOf="@id/ivSeekbar"
        app:layout_constraintTop_toBottomOf="@id/ivSeekbar"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/grotesk_light"
        android:text="@string/one"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_10"
        app:layout_constraintStart_toStartOf="@id/ivSeekbar"
        app:layout_constraintTop_toBottomOf="@id/tvHappy"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvUnhappy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_3"
        android:fontFamily="@font/grotesk_light"
        android:text="@string/happy"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_10"
        app:layout_constraintEnd_toEndOf="@id/ivSeekbar"
        app:layout_constraintTop_toBottomOf="@id/ivSeekbar"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/grotesk_light"
        android:text="@string/ten"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_10"
        app:layout_constraintEnd_toEndOf="@id/ivSeekbar"
        app:layout_constraintTop_toBottomOf="@id/tvUnhappy"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNoData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:fontFamily="@font/grotesk_light"
        android:text="@string/sorry_no_data"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_12"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHappy"
        tools:visibility="visible"
        />

</androidx.constraintlayout.widget.ConstraintLayout>