<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_1"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAppName1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_124"
        android:layout_marginBottom="@dimen/dp_neg_12"
        android:fontFamily="@font/domaine_sans"
        android:includeFontPadding="false"
        android:text="@string/spring"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_80"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHowYouUseFB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_neg_4"
        android:fontFamily="@font/grotesk_light_font_family"
        android:includeFontPadding="false"
        android:text="@string/how_you_use_fb"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_22"
        app:layout_constraintEnd_toEndOf="@id/tvAppName1"
        app:layout_constraintStart_toStartOf="@id/tvAppName1"
        app:layout_constraintTop_toBottomOf="@id/tvAppName1"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFBUseYou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/grotesk_light_font_family"
        android:includeFontPadding="false"
        android:text="@string/how_fb_use_you"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_22"
        app:layout_constraintEnd_toEndOf="@id/tvAppName1"
        app:layout_constraintStart_toStartOf="@id/tvAppName1"
        app:layout_constraintTop_toBottomOf="@id/tvHowYouUseFB"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvToSandPP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/dp_16"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/grotesk_light_font_family"
        android:gravity="center"
        android:text="@string/by_continuing"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/btnGetStarted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGetStarted"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginStart="@dimen/dp_18"
        android:layout_marginTop="@dimen/dp_72"
        android:layout_marginEnd="@dimen/dp_18"
        android:layout_marginBottom="@dimen/dp_20"
        android:background="@drawable/bg_cognac_stateful"
        android:fontFamily="@font/grotesk_regular_font_family"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/get_started_arrow"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/tvLogin"
        tools:visibility="visible"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_36"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/grotesk_light_font_family"
        android:gravity="center"
        android:text="@string/i_already_have_an_account_arrow"
        android:textColor="@drawable/color_white_stateful"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible"
        />

</androidx.constraintlayout.widget.ConstraintLayout>