<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingStart="@dimen/dp_18"
    android:paddingTop="@dimen/dp_30"
    android:paddingEnd="@dimen/dp_18"
    android:paddingBottom="@dimen/dp_30"
    >

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/ivTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/domaine_sans"
        android:includeFontPadding="false"
        android:text="@string/categories_for_ads"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_6"
        android:fontFamily="@font/grotesk_light_font_family"
        android:text="@string/these_categories_are_based"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivTitle"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNoData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_20"
        android:fontFamily="@font/grotesk_light"
        android:includeFontPadding="false"
        android:text="@string/sorry_no_data"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_12"
        android:visibility="gone"
        tools:visibility="visible"
        />

</LinearLayout>