<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_marginTop="25dp"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/dp_18"
        android:paddingEnd="@dimen/dp_18"
        app:layout_constraintTop_toTopOf="parent"
        >

        <com.bitmark.fbm.util.view.TouchableOpacityAppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:focusable="true"
            android:paddingTop="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back_2"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_18"
        app:layout_constraintBottom_toTopOf="@id/btnContinue"
        app:layout_constraintTop_toBottomOf="@id/layoutToolbar"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="@font/domaine_sans"
            android:includeFontPadding="false"
            android:text="@string/trust_is_critical"
            android:textAllCaps="true"
            android:textColor="@color/black"
            app:autoSizeMaxTextSize="36sp"
            app:autoSizeMinTextSize="24sp"
            app:autoSizeTextType="uniform"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_24"
            android:fontFamily="@font/grotesk_light_font_family"
            android:text="@string/spring_is_from_bitmark"
            android:textColor="@color/black"
            android:textSize="18sp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_24"
            android:fontFamily="@font/grotesk_light_font_family"
            android:text="@string/sincerely_colon"
            android:textColor="@color/black"
            android:textSize="18sp"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_68"
            android:adjustViewBounds="true"
            android:src="@drawable/sean_sig"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:fontFamily="@font/grotesk_light_font_family"
            android:text="@string/sean_name_and_title"
            android:textColor="@color/black"
            android:textSize="18sp"
            />


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinue"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/dp_18"
        android:layout_marginEnd="@dimen/dp_18"
        android:layout_marginBottom="44dp"
        android:background="@drawable/bg_cognac_stateful"
        android:fontFamily="@font/grotesk_regular_font_family"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/continue_arrow"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>