<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/dp_24"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_2"
        app:layout_constraintBottom_toTopOf="@id/tvTitle"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_14"
        android:fontFamily="@font/domaine_sans"
        android:gravity="center"
        android:text="@string/how_it_works"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_36"
        app:layout_constraintBottom_toTopOf="@id/tvMsg"
        app:layout_constraintEnd_toEndOf="@id/btnContinue"
        app:layout_constraintStart_toStartOf="@id/btnContinue"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMsg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_48"
        android:fontFamily="@font/grotesk"
        android:text="@string/we_will_back_up_your_fb_data"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_18"
        app:layout_constraintBottom_toTopOf="@id/btnContinue"
        app:layout_constraintEnd_toEndOf="@id/btnContinue"
        app:layout_constraintStart_toStartOf="@id/btnContinue"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_marginStart="@dimen/dp_18"
        android:layout_marginEnd="@dimen/dp_18"
        android:layout_marginBottom="@dimen/dp_44"
        android:background="@drawable/bg_cognac_stateful"
        android:fontFamily="@font/grotesk"
        android:text="@string/continue_arrow"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_17"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>