<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_3"
        app:layout_constraintBottom_toTopOf="@id/tvTitle"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/dp_14"
        android:fontFamily="@font/domaine_sans"
        android:includeFontPadding="false"
        android:text="@string/data_requested"
        android:textAllCaps="true"
        android:textColor="@color/black"
        app:autoSizeMaxTextSize="36sp"
        app:autoSizeMinTextSize="24sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/tvMsg"
        app:layout_constraintEnd_toEndOf="@id/btnCheckNow"
        app:layout_constraintStart_toStartOf="@id/btnCheckNow"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMsg"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/grotesk_light_font_family"
        android:textColor="@color/black"
        app:autoSizeMaxTextSize="18sp"
        app:autoSizeMinTextSize="14sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/btnCheckNow"
        app:layout_constraintEnd_toEndOf="@id/btnCheckNow"
        app:layout_constraintStart_toStartOf="@id/btnCheckNow"
        tools:text="@string/we_are_waiting_for_fb_1"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCheckNow"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/dp_18"
        android:layout_marginEnd="@dimen/dp_18"
        android:layout_marginBottom="44dp"
        android:background="@drawable/bg_cognac_stateful"
        android:fontFamily="@font/grotesk_regular_font_family"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/check_now_arrow"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_17"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible"
        />


</androidx.constraintlayout.widget.ConstraintLayout>